# Atividades---TP1-Comp-Gr-fica

./: README.md
@TP-1/: README.md  makefile  tp1_visualizador
@TP-1/src/: backup.cpp  globals.h  handlers.cpp  handlers.h  interface.cpp  main.cpp  utils.h
@TP-2/: README.md  makefile  tp2_visualizador
@TP-2/@TP-1/: README.md  TRANSFORMACOES_2D.md  tp1_visualizador
@TP-2/@TP-1/src/: interface.h
@TP-2/Exercicios_de_sala/: aula_18_exercício_1
@TP-2/src/: backup.cpp  globals.cpp  globals.h  handlers.cpp  handlers.h  interface.cpp  interface.h  main.cpp  utils.cpp  utils.h
Ex 1 - Fundamentos de programacao grafica/: quadrado
Ex 10 - Aula 12 - Modelo de Gouraud (Iluminacao por Vertices)/: CMakeLists.txt  README.md  main.cpp  mesh.cpp  mesh.h  vector3d.h
Ex 11 - Modelo de Sombreamento Phong/: esfera  main.c
Ex 2 - Aula 4 - Teoria das Cores/: Q3RGB->CMYK.doc
Ex 2 - Teoria das Cores/: Q2.c  triangulo
Ex 3 - Primitivas e Atributos/: main.c  quadrado
Ex 4 - Modelagem de Objetos Geométricos Elementares/: README.md  cubo.h  main.cpp  transformacoes.h
Ex 5 - Aula 7 - Transformações Geométricas 2D e 3D/: Makefile  README.md  transformacoes_3d  transformacoes_3d.cpp
Ex 6 - Modelagem de Objetos Geométricos Elementares/: cubo.cpp
Ex 6 - Operacoes com Dados Geometricos e Posicionamento de Camera/: main.cpp
Ex 7 -Tipos de Projeção/: README.md  main.cpp
Ex 8 - Aula 10 - Fontes de Luz/src/: main.cpp
Ex 9 - Aula 11 - Modelo de Sombreamento Flat/: INSTRUÇÕES.md  Makefile  README.md  main.cpp  shading_comparison
Fundamentos de programacao grafica/: main.c
Operacoes com Dados Geometricos e Posicionamento de Camera/: braco_robotico  makefile
Teoria das Cores/: Q1HSV->RGB.doc
Trabalho Pratico 1/: .gitignore  makefile
Trabalho Pratico 1/src/: backup.cpp  globals.cpp  utils.cpp
(+15 files in other folders)
